<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eats My Calories</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_choice">Choisissez un menu</string>
    <string name="menu_alea">Choix aléatoire d\'un menu</string>
    <string name="title_activity_choix_menu">ChoixMenu</string>
    <string name="title_activity_choix_alea">ChoixAlea</string>
    <string name="choix_viande">Viande/Poisson</string>
    <string name="choix_breakfast">Element de votre petit déjeuner :</string>
    <string name="choix_lait">Produit laitier :</string>
    <string name="choix_fruit">Jus ou fruit :</string>
    <string name="choix_cereal">Type de Céréales :</string>
    <string name="next">Suivant</string>
    <string name="total">Calories Total :</string>
    
    <string-array name="array_lait">
        <item >-- Vide --</item>
        <item >Fromage</item>
        <item >Lait cru</item>
        <item >Chocolat chaud</item>
    </string-array>
    
    <string-array name="array_fruit">
        <item >-- Vide --</item>
        <item >Jus d\'orange</item>
        <item >Banane</item>
        <item >Raisin</item>
    </string-array>
    
    <string-array name="array_cereal">
        <item >-- Vide --</item>
        <item >pain aux chocolat</item>
        <item >Biscuit</item>
        <item >Flocon d\'avoine</item>
    </string-array>
    
    <integer-array name="array_calories">
        <item >0</item>
        <item >10</item>
        <item >20</item>
        <item >30</item>
    </integer-array>
    

</resources>
